--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
 	},
 	"dependencies": {
 		"react": "16.0.0-alpha.12",
-		"react-native": "0.47.0"
+		"react-native": "0.47.0",
+		"react-native-material-kit": "^0.4.1",
+		"react-native-vector-icons": "^4.3.0"
 	},
 	"devDependencies": {
 		"babel-jest": "20.0.3",
 		"babel-preset-react-native": "2.1.0",
-		"babel-preset-es2015":"^6.24.1",
+		"babel-preset-es2015": "^6.24.1",
 		"jest": "20.0.4",
 		"react-test-renderer": "16.0.0-alpha.12"
 	},
